--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
+APP_ID_QQ=101850471
+
